--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,10 +30,23 @@ jobs:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
           EC2_APP_DIR: ${{ secrets.EC2_APP_DIR }}
+          APP_SUBDIR: Assignments/Session2-23Aug2025/clinicalbert-api
           BRANCH: ${{ vars.DEPLOY_BRANCH || 'main' }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+
+
         run: |
-          ssh -o StrictHostKeyChecking=no ${EC2_USER}@${EC2_HOST} << 'EOF'
+          # Fail early on the runner if anything is missing
+          [ -n "${EC2_HOST:-}" ] || { echo "EC2_HOST missing"; exit 1; }
+          [ -n "${EC2_USER:-}" ] || { echo "EC2_USER missing"; exit 1; }
+          [ -n "${EC2_APP_DIR:-}" ] || { echo "EC2_APP_DIR missing"; exit 1; }
+          [ -n "${APP_SUBDIR:-}" ] || { echo "APP_SUBDIR missing"; exit 1; }
+          ssh -o StrictHostKeyChecking=no "${EC2_USER}@${EC2_HOST}" \
+          "EC2_APP_DIR='${EC2_APP_DIR}' APP_SUBDIR='${APP_SUBDIR}' BRANCH='${BRANCH}' GITHUB_REPOSITORY='${GITHUB_REPOSITORY}' bash -s" <<'EOF'
           set -euxo pipefail
+
+
+
 
           # --- Base packages (Ubuntu) ---
           sudo apt-get update -y
