--- a/Assignments/Session2-23Aug2025/clinicalbert-api/requirements.txt
+++ b/Assignments/Session2-23Aug2025/clinicalbert-api/requirements.txt
@@ -1,6 +1,6 @@
 # FastAPI and web framework
 fastapi==0.104.1
-uvicorn==0.24.0.post1
+uvicorn[standard]==0.24.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
 
