--- a/Assignments/Session2-23Aug2025/clinicalbert-api/package.json
+++ b/Assignments/Session2-23Aug2025/clinicalbert-api/package.json
@@ -66,6 +66,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.19",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
