--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -180,7 +180,7 @@ jobs:
           else
             npm install --no-audit --no-fund --legacy-peer-deps
           fi
-          
+          npm install --save-dev @tailwindcss/postcss
           # sanity check the plugin is present (optional but helpful)
           node -e "console.log(require.resolve('@tailwindcss/postcss'))"
           npm run build
