--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,6 +75,18 @@ jobs:
 
             # ensure UI calls API through nginx
             [ -f .env.production.local ] || printf 'NEXT_PUBLIC_API_BASE=/api\n' > .env.production.local
+            rm -rf .next || true
+            npm install next
+            # install (see lockfile logic above)
+            if [ -f package-lock.json ]; then
+              npm ci --no-audit --no-fund --legacy-peer-deps
+            else
+              npm install --no-audit --no-fund --legacy-peer-deps
+            fi
+            npm install --save-dev @tailwindcss/postcss
+            # sanity check the plugin is present (optional but helpful)
+            node -e "console.log(require.resolve('@tailwindcss/postcss'))"
+            npm run build
 
             export NODE_ENV=production
             export NEXT_TELEMETRY_DISABLED=1
@@ -173,17 +185,7 @@ jobs:
           # --- Build Next.js UI (port 3000) ---
           cd "${APP_PATH}"
           # --- ensure Tailwind v4 PostCSS plugin is present ---
-          rm -rf .next || true
-          # install (see lockfile logic above)
-          if [ -f package-lock.json ]; then
-            npm ci --no-audit --no-fund --legacy-peer-deps
-          else
-            npm install --no-audit --no-fund --legacy-peer-deps
-          fi
-          npm install --save-dev @tailwindcss/postcss
-          # sanity check the plugin is present (optional but helpful)
-          node -e "console.log(require.resolve('@tailwindcss/postcss'))"
-          npm run build
+          
           # --- systemd: Next.js UI (port 3000) ---
           sudo tee /etc/systemd/system/nextjs.service >/dev/null <<'UNIT'
           [Unit]
