--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -199,7 +199,7 @@ jobs:
           Environment=NODE_ENV=production
           Environment=NEXT_TELEMETRY_DISABLED=1
           Environment=PORT=3000
-          ExecStart=bin/bash -lc 'npm run start -- -p 3000'
+          ExecStart=/bin/bash -lc 'npm run start -- -p 3000'
           Restart=always
           RestartSec=5
 
