--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -109,7 +109,10 @@ jobs:
 
           export NODE_ENV=production
           export NEXT_TELEMETRY_DISABLED=1
-          export NODE_OPTIONS="--max-old-space-size=384"   # keep memory low on small EC2
+          export NODE_OPTIONS="--max-old-space-size=384"
+          export SWC_THREADS=1
+          export TURBO_MAX_THREADS=1
+          export NEXT_DISABLE_SOURCEMAP=1 # keep memory low on small EC2
           npm run build
           REQ="${APP_PATH}/requirements.txt"
           if [ ! -f "$REQ" ]; then
