--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -239,6 +239,23 @@ jobs:
           server {
             listen 80;
             server_name _;
+            location /docker/ {
+                proxy_pass http://127.0.0.1:8080/;
+                proxy_http_version 1.1;
+                proxy_set_header Host              $host;
+                proxy_set_header X-Real-IP         $remote_addr;
+                proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+
+                # websockets (safe to include even if not used)
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection $connection_upgrade;
+
+                # timeouts to avoid abrupt 502s on long requests
+                proxy_read_timeout 300s;
+                proxy_connect_timeout 60s;
+                proxy_send_timeout 300s;
+              }
             location /{ proxy_pass http://127.0.0.1:3000; 
                         proxy_http_version 1.1;
                         proxy_set_header Upgrade $http_upgrade;
