--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -245,7 +245,7 @@ jobs:
           server {
             listen 80;
             server_name _;
-            location /docker/ {
+            location /hapi/ {
                 proxy_pass http://127.0.0.1:8080/;
                 proxy_http_version 1.1;
                 proxy_set_header Host              $host;
@@ -268,6 +268,11 @@ jobs:
                         proxy_set_header Connection "upgrade";
                         proxy_set_header Host $host; 
                   }
+            location /fhir/ {
+              proxy_pass http://127.0.0.1:8080/fhir/;   # note the trailing /
+              proxy_set_header Host $host;
+              proxy_http_version 1.1;
+            }
             location /api/ {
               proxy_pass http://127.0.0.1:8001/;
               proxy_set_header Host $host;
